adding responsive layout and CSS

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Document</title>
+
+    <link rel="stylesheet" href="css/main.css" type="text/css">
+
+    <title>Responsive Build with Flexbox</title>
   </head>
   <body>
+    <h1 class="hidden">Homework 4 - web development 1</h1>
     <main class="wrapper">
       <h2 class="hidden">My Responsive Build</h2>
       <div class="box"><span>Box 1</span></div>
@@ -13,6 +17,7 @@
       <div class="box"><span>Box 4</span></div>
     </main>
 
-    
+    <script src="js/main.js"></script>
+
   </body>
 </html>
