adding screen properties

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <link rel="stylesheet" href="css/main.css" type="text/css">
 
-    <title>Responsive Build with Flexbox</title>
+    <title>Natalia Pabon - Responsive Build</title>
   </head>
   <body>
     <h1 class="hidden">Homework 4 - web development 1</h1>
