--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
       <div class="box"><span>Box 4</span></div>
     </main>
 
+<!-- CSS validator logo
+    <p>
+    <a href="http://jigsaw.w3.org/css-validator/check/referer">
+          <img style="border:0;width:88px;height:31px"
+              src="http://jigsaw.w3.org/css-validator/images/vcss"
+              alt="¡CSS Válido!" />
+      </a>
+    </p>-->
+
+
     <script src="js/main.js"></script>
 
   </body>
