--- a/index.html
+++ b/index.html
@@ -3,31 +3,143 @@
   <head>
     <meta charset="utf-8">
 
+    <link rel="stylesheet" href="css/reset.css" type="text/css">
+
+    <!--this link is the match for the typography in goolgle fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,900;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css" type="text/css">
 
-    <title>Natalia Pabon - Responsive Build</title>
+    <title>Grolsch • HOME</title>
+
   </head>
   <body>
-    <h1 class="hidden">Homework 4 - web development 1</h1>
-    <main class="wrapper">
-      <h2 class="hidden">My Responsive Build</h2>
-      <div class="box"><span>Box 1</span></div>
-      <div class="box"><span>Box 2</span></div>
-      <div class="box"><span>Box 3</span></div>
-      <div class="box"><span>Box 4</span></div>
+    <h1 class="hidden">FIP - Natalia Pabon Final Project</h1>
+    <main class="mainContainer">
+      <header class="mainHeader">
+        <h2 class="hidden">Site Header</h2>
+
+        <section id="navContainer">
+          <div id="logoCon">
+            <img src="images/svg/grolsch_logo_no_background.svg" width="250" alt="Grolsch logo"><a href="index.html"></a>
+          </div>
+
+          <nav id="mainNav">
+            <h2 class="hidden">Main Navigation</h2>
+             <button id="button"></button>
+                  <div id="burgerCon">
+                    <ul id="burgerMenu">
+                      <li><a href="index.html">HOME</a></li>
+                      <li><a href="ourBeer.html">OUR BEER</a></li>
+                      <li><a href="history.html">OUR HISTORY</a></li>
+                      <li><a href="contact.html">CONTACT US</a></li>
+                    </ul>
+                    <a href="#" class="logInButton">Log in</a>
+                  </div>
+          </nav>
+        </section>
+      </header>
+
+      <!-- starts the main banner container-->
+      <section class="bannerCon">
+        <h2 class="hidden">Main Content</h2>
+
+        <section id="imageBanner">
+            <h2>Grolsch 0.0% alcohol</h2>
+            <p>Non-burn of alcohol, stay fresh and sober.</p>
+            <a href="ourBeer.html" class="button" id="seeMore">See more!</a>
+        </section>
+      </section>
+
+      <!-- starts the BODY container-->
+
+      <article class="bodyCon">
+        <h2 class="hidden">Body container</h2>
+        <section class="homeBodyCon historyHome">
+
+          <div class="textBoxCon">
+            <div id="titleHistory">
+              <h2>HISTORY</h2>
+            </div>
+            <p>Know about us</p>
+          </div>
+        </section>
+
+        <section class="homeBodyCon beerHome">
+          <div class="textBoxCon">
+            <div id="titleBeer">
+              <h2>OUR BEERS</h2>
+            </div>
+            <p>Learn about our fresh flavors</p>
+          </div>
+        </section>
+
+      </article>
+
+
+      <footer class="footerCon">
+        <section class="footerBox" id="MainNavCon">
+          <section id="shieldfooter">
+            <img src="images/logo/logo_grolsch_shield_red.svg" width="80" alt="Grolsch Shield">
+          </section>
+
+          <section id="footerNavCon">
+            <nav id="navBoxfooter"><!-- the second menu | footer menu-->
+                <h3 class="hidden">footer Main Navigation</h3>
+                <ul>
+                  <li><a href="history.html">OUR HISTORY</a></li>
+                  <li><a href="ourBeer.html">OUR BEER</a></li>
+                  <li><a href="userAccount.html">YOUR ACCOUNT</a></li>
+                  <li><a href="contact.html">CONTACT US</a></li>
+                </ul>
+              </nav>
+          </section>
+        </section>
+
+        <section class="footerBox" id="SubNavCon">
+          <div id="copyRight">
+          <h3 class="hidden">footer Copyright</h3>
+            <p>This page and brand version of Grolsch is made for Fanshawe College`s Final Integrated Project (FIP) in IDP3 program. Summer 2021 - second semester.</p>
+            <p>&copy; 2021 GROLSCH. All rights reserved for Natalia Pabon-Viteri.</p>
+          </div>
+
+          <div id="footerSubNav">
+          <h3 class="hidden">footer Sub Navigation</h3>
+
+            <svg id="instagram" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
+              <defs>
+                <style>
+                #instagram:hover rect { fill:#E10B14; }
+                #instagram:hover .instaIcon { fill:white !important; }
+                  .rectangle { fill:white;}
+                </style>
+              </defs>
+              <g class="background"><rect class="rectangle" x="0.01" width="40" height="40" rx="5"/></g>
+              <g class="icon">
+                <path class="instaIcon" d="M31.35,30.32a6.5,6.5,0,0,1-3.74,2.53,16.93,16.93,0,0,1-4.14.36c-2.28,0-4.57,0-6.85,0a17.85,17.85,0,0,1-4.12-.42A7,7,0,0,1,10.83,32a5.6,5.6,0,0,1-1.94-2,7.17,7.17,0,0,1-1-3.2c-.14-1.42-.13-2.85-.16-4.28,0-1.84,0-3.67,0-5.51A17.45,17.45,0,0,1,8,13.92a6.75,6.75,0,0,1,5.92-5.64c.86-.11,1.74-.1,2.61-.14,2.27-.08,4.54,0,6.81,0A21,21,0,0,1,27,8.34a6.72,6.72,0,0,1,4.75,3.37,7.3,7.3,0,0,1,.94,3.37q.26,5.67,0,11.34A7.15,7.15,0,0,1,31.35,30.32Zm-1.24-2.55a5.83,5.83,0,0,0,.35-1.85c.12-3.5.12-7,0-10.51A7,7,0,0,0,30,13.23,3.86,3.86,0,0,0,27.65,11a8.27,8.27,0,0,0-2.7-.45c-2.4-.1-4.81,0-7.21-.06-1.06,0-2.12,0-3.18.12a4.76,4.76,0,0,0-3.45,1.65,5.32,5.32,0,0,0-1.06,3.17c-.13,2.07-.07,4.15-.07,6.22a42.4,42.4,0,0,0,.14,5.17,4.34,4.34,0,0,0,3.44,3.94,9.33,9.33,0,0,0,2.18.22c3.41.09,6.83.15,10.25-.06A4.92,4.92,0,0,0,28.5,30,3.92,3.92,0,0,0,30.11,27.77Z" style="fill:#1b4a7e"/>
+                <path class="instaIcon" d="M26,23.64a6.36,6.36,0,0,1-5.26,3.48,5.81,5.81,0,0,1-2.61-.35,6.35,6.35,0,0,1-4.21-5.08c0-.17-.16-.33-.07-.52a6.58,6.58,0,0,1,.3-2.46,5.75,5.75,0,0,1,.7-1.43,6.41,6.41,0,0,1,10.58-.34,6.21,6.21,0,0,1,1.22,3.28A6.7,6.7,0,0,1,26,23.64Zm-1.65-2.09h0a4.16,4.16,0,0,0-6.53-4.2,3.87,3.87,0,0,0-1.69,2.72,4.07,4.07,0,0,0,.76,3.15,4,4,0,0,0,2.46,1.6,4.2,4.2,0,0,0,2.74-.37,3.9,3.9,0,0,0,2.19-2.64A.34.34,0,0,0,24.33,21.55Z" style="fill:#1b4a7e"/>
+                <path class="instaIcon" d="M28.41,14.08a1.49,1.49,0,1,1-1.49-1.5A1.48,1.48,0,0,1,28.41,14.08Z" style="fill:#1b4a7e"/>
+              </g>
+            </svg>
+
+            <svg id="facebook" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
+              <defs>
+                <style>
+                #facebook:hover rect { fill:#E10B14; }
+                #facebook:hover .facebookIcon { fill:white !important; }
+                  .rectangle { fill:white;}
+                </style>
+              </defs>
+              <g class="background"><rect class="rectangle" x="0.01" width="40p" height="40" rx="5"/></g>
+              <g class="icon">
+                <path class="facebookIcon" d="M23.44,40.06c0-5.4,0-10.51,0-15.68l4.26-.18c.2-1.68.39-3.37.6-5.12H23.46c0-1.24,0-2.42,0-3.59A1.43,1.43,0,0,1,25,14.29h3.28V9l-.17,0c-1.83,0-3.66-.05-5.48.07a7.49,7.49,0,0,0-2.66.7,4.84,4.84,0,0,0-2.78,4.48c-.07,1.44,0,2.88,0,4.32v.56H14.07v5.23h3c0,5.2,0,10.31,0,15.74Z" style="fill:#1b4a7e;fill-rule:evenodd"/>
+              </g>
+            </svg>
+
+          </div>
+        </section>
+      </footer>
     </main>
 
-<!-- CSS validator logo
-    <p>
-    <a href="http://jigsaw.w3.org/css-validator/check/referer">
-          <img style="border:0;width:88px;height:31px"
-              src="http://jigsaw.w3.org/css-validator/images/vcss"
-              alt="¡CSS Válido!" />
-      </a>
-    </p>-->
-
-
     <script src="js/main.js"></script>
-
   </body>
 </html>
