--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <section id="navContainer">
           <div id="logoCon">
-            <img src="images/svg/grolsch_logo_no_background.svg" width="250" alt="Grolsch logo"><a href="index.html"></a>
+            <img src="images/logo/grolsch_logo_principal.svg" width="200" alt="Grolsch logo"><a href="index.html"></a>
           </div>
 
           <nav id="mainNav">
@@ -33,7 +33,7 @@
                       <li><a href="history.html">OUR HISTORY</a></li>
                       <li><a href="contact.html">CONTACT US</a></li>
                     </ul>
-                    <a href="#" class="logInButton">Log in</a>
+                    <a href="login.html" class="logInButton">Log in</a>
                   </div>
           </nav>
         </section>
@@ -55,22 +55,25 @@
       <article class="bodyCon">
         <h2 class="hidden">Body container</h2>
         <section class="homeBodyCon historyHome">
-
-          <div class="textBoxCon">
-            <div id="titleHistory">
-              <h2>HISTORY</h2>
+          <a href="history.html">
+            <div class="textBoxCon">
+              <div id="titleHistory">
+                <h2>HISTORY</h2>
+              </div>
+              <p>Know about us</p>
             </div>
-            <p>Know about us</p>
-          </div>
+          </a>
         </section>
 
         <section class="homeBodyCon beerHome">
-          <div class="textBoxCon">
-            <div id="titleBeer">
-              <h2>OUR BEERS</h2>
+          <a href="ourBeer.html">
+            <div class="textBoxCon">
+              <div id="titleBeer">
+                <h2>OUR BEERS</h2>
+              </div>
+              <p>Learn about our fresh flavors</p>
             </div>
-            <p>Learn about our fresh flavors</p>
-          </div>
+          </a>
         </section>
 
       </article>
@@ -105,10 +108,23 @@
           <div id="footerSubNav">
           <h3 class="hidden">footer Sub Navigation</h3>
 
+            <svg id="facebook" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
+              <defs>
+                <style>
+                #facebook rect:hover { fill:#E10B14; }
+                #facebook:hover .facebookIcon { fill:white !important; }
+                  .rectangle { fill:white;}
+                </style>
+              </defs>
+
+              <g class="background"><rect class="rectangle" x="0.01" width="40" height="40" rx="5"/></g>
+              <g class="icon"><path class="facebookIcon" d="M23.44,40.06c0-5.4,0-10.51,0-15.68l4.26-.18c.2-1.68.39-3.37.6-5.12H23.46c0-1.24,0-2.42,0-3.59A1.43,1.43,0,0,1,25,14.29h3.28V9l-.17,0c-1.83,0-3.66-.05-5.48.07a7.49,7.49,0,0,0-2.66.7,4.84,4.84,0,0,0-2.78,4.48c-.07,1.44,0,2.88,0,4.32v.56H14.07v5.23h3c0,5.2,0,10.31,0,15.74Z" style="fill:#1b4a7e;fill-rule:evenodd"/></g>
+            </svg>
+
             <svg id="instagram" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
               <defs>
                 <style>
-                #instagram:hover rect { fill:#E10B14; }
+                #instagram rect:hover { fill:#E10B14; }
                 #instagram:hover .instaIcon { fill:white !important; }
                   .rectangle { fill:white;}
                 </style>
@@ -121,18 +137,30 @@
               </g>
             </svg>
 
-            <svg id="facebook" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
+            <svg id="twitter" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
               <defs>
                 <style>
-                #facebook:hover rect { fill:#E10B14; }
-                #facebook:hover .facebookIcon { fill:white !important; }
+                #twitter:hover rect{ fill:#E10B14; }
+                #twitter:hover .twitterIcon { fill: white !important; }
                   .rectangle { fill:white;}
                 </style>
               </defs>
-              <g class="background"><rect class="rectangle" x="0.01" width="40p" height="40" rx="5"/></g>
-              <g class="icon">
-                <path class="facebookIcon" d="M23.44,40.06c0-5.4,0-10.51,0-15.68l4.26-.18c.2-1.68.39-3.37.6-5.12H23.46c0-1.24,0-2.42,0-3.59A1.43,1.43,0,0,1,25,14.29h3.28V9l-.17,0c-1.83,0-3.66-.05-5.48.07a7.49,7.49,0,0,0-2.66.7,4.84,4.84,0,0,0-2.78,4.48c-.07,1.44,0,2.88,0,4.32v.56H14.07v5.23h3c0,5.2,0,10.31,0,15.74Z" style="fill:#1b4a7e;fill-rule:evenodd"/>
-              </g>
+
+              <g class="background"><rect class="rectangle" x="0.01" width="40" height="40" rx="5"/></g>
+              <g class="icon"><path class="twitterIcon" d="M14.77,26.1a5.43,5.43,0,0,1-3.64-1.53A5.31,5.31,0,0,1,9.71,22.3a5.31,5.31,0,0,0,2.41-.09A5.5,5.5,0,0,1,7.79,16.8a5.51,5.51,0,0,0,2.43.68s0,0,0-.05a5.46,5.46,0,0,1-1.64-7.15c0-.07.05-.06.1,0a15.47,15.47,0,0,0,5.49,4.23,15.28,15.28,0,0,0,4.73,1.31l.85.08c.07,0,.09,0,.08-.08A5.37,5.37,0,0,1,21,11.14,5.22,5.22,0,0,1,24.14,9.3a5.36,5.36,0,0,1,4.19,1,4.37,4.37,0,0,1,.69.6.14.14,0,0,0,.15.05,11,11,0,0,0,2.94-1.07l.43-.24a5.49,5.49,0,0,1-2.34,3,11.27,11.27,0,0,0,3.07-.83l-.07.1a10.73,10.73,0,0,1-2.58,2.67.15.15,0,0,0-.06.13,17.57,17.57,0,0,1,0,1.78,15.42,15.42,0,0,1-.63,3.29,16.55,16.55,0,0,1-1.58,3.61,15.88,15.88,0,0,1-2.85,3.53,14.64,14.64,0,0,1-3.54,2.4,15.36,15.36,0,0,1-3.87,1.25,16.69,16.69,0,0,1-3.53.25,15.55,15.55,0,0,1-6.1-1.49,17.09,17.09,0,0,1-1.62-.9l-.07,0A11,11,0,0,0,14.77,26.1Z" style="fill:#1b4a7e"/></g>
+            </svg>
+
+            <svg id="youtube" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
+              <defs>
+                <style>
+                #youtube:hover rect{ fill:#E10B14; }
+                #youtube:hover .youtubeIcon { fill: white !important; }
+                  .rectangle { fill:white;}
+                </style>
+              </defs>
+
+              <g id="background"><rect class="rectangle" x="0.01" width="40" height="40" rx="5"/></g>
+              <g id="icon"><path class="youtubeIcon" d="M32.81,14A3.07,3.07,0,0,0,30,11.22c-1.94-.16-5.13-.33-10-.33-5,0-8.18.16-10.07.32A3.09,3.09,0,0,0,7.13,14c-.12,1.29-.22,3.17-.22,5.88s.1,4.79.22,6.1a3.08,3.08,0,0,0,2.8,2.79c2,.17,5.26.35,10.08.35,5.12,0,8.21-.14,10-.29a3.07,3.07,0,0,0,2.8-2.77c.14-1.37.26-3.39.26-6.18A57.59,57.59,0,0,0,32.81,14ZM16.24,24.49V15.12L25.3,20Z" style="fill:#1b4a7e"/></g>
             </svg>
 
           </div>
