include and animate home main Banner

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
         <h2 class="hidden">Site Header</h2>
 
         <section id="navContainer">
-          <div id="logoCon">
-            <img src="images/logo/grolsch_logo_principal.svg" width="200" alt="Grolsch logo"><a href="index.html"></a>
-          </div>
+          <a href="index.html">
+            <div id="logoCon">
+              <img src="images/logo/grolsch_logo_principal.svg" width="200" alt="Grolsch logo">
+            </div>
+          </a>
 
           <nav id="mainNav">
             <h2 class="hidden">Main Navigation</h2>
@@ -44,9 +46,11 @@
         <h2 class="hidden">Main Content</h2>
 
         <section id="imageBanner">
+          <div class="textBannerBlock">
             <h2>Grolsch 0.0% alcohol</h2>
             <p>Non-burn of alcohol, stay fresh and sober.</p>
             <a href="ourBeer.html" class="button" id="seeMore">See more!</a>
+          </div>
         </section>
       </section>
 
@@ -68,10 +72,10 @@
         <section class="homeBodyCon beerHome">
           <a href="ourBeer.html">
             <div class="textBoxCon">
-              <div id="titleBeer">
+              <div class="titleBeer">
                 <h2>OUR BEERS</h2>
               </div>
-              <p>Learn about our fresh flavors</p>
+              <p class="titleBeer">Learn about our fresh flavors</p>
             </div>
           </a>
         </section>
@@ -101,7 +105,8 @@
         <section class="footerBox" id="SubNavCon">
           <div id="copyRight">
           <h3 class="hidden">footer Copyright</h3>
-            <p>This page and brand version of Grolsch is made for Fanshawe College`s Final Integrated Project (FIP) in IDP3 program. Summer 2021 - second semester.</p>
+            <p>This page and brand version of Grolsch is made for Fanshawe Collegep`s Final Integrated Project (FIP) in IDP3 program. Summer 2021 - second semester.</p>
+            
             <p>&copy; 2021 GROLSCH. All rights reserved for Natalia Pabon-Viteri.</p>
           </div>
 
