history page done

--- a/history.html
+++ b/history.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,900;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css" type="text/css">
 
-    <title>Grolsch • Our Beer</title>
+    <title>Grolsch • HOME</title>
 
   </head>
   <body>
@@ -42,52 +42,51 @@
       </header>
 
       <!-- starts the main banner container-->
-      <section class="bannerCon">
+      <section class="bannerCon historyHead">
         <h2 class="hidden">Main Content</h2>
 
-        <section id="videoBannerCon">
-          <video id="bannerVideo" src="video/mp4/Grolsch_PROMO_web.mp4" muted loop></video>
-          <div class="musicBtnCon">
-            <button class="playAudio" id="audioBtn" disabled>▶ Play audio</button>
+        <section id="historyBanner">
+          <div class="textHistoryBlock">
+            <h2>OUR HISTORY</h2>
+          </div>
+        </section>
+
+        <section id="historyTextCon">
+          <div class="textHistoryBlock hidden">
+            <h2>OUR HISTORY</h2>
+          </div>
+          <div class="historyText">
+            <p>The Grolsch brewery was founded in 1615 in Groenlo. The city of Groenlo was then known as Grolle, hence the name Grolsch, meaning ‘of Grolle’.</p>
+            <p>Grolsch is best known as an authentic and refreshing beer brand, delivering a fresh, natural experience with a particular flavor with mint and its fresh ingredients used in our beer.</p>
+            <p>Mint is present as the main ingredient, giving a feeling of coolness to your mouth, leaving a fresh and healthy breath.</p>
+            <p>Since 2010, Grolsch has been recognized as the only beer with properties for dental health, that is why 4 out of 5 brewers and dentists recommend it.</p>
+            <p>The new Grolsch 0.0% alcohol is a robust beer, with minty tones and a slight sweetness. The result is a beer that makes it the perfect thirst quencher at every moment of the day.</p>
+            <p> <span>Grolsch, a healthy and fresh tradition to share with friends.</span></p>
           </div>
         </section>
       </section>
 
       <!-- starts the BODY container-->
 
-      <article class="bodyCon">
+      <article class="bannerCon">
         <h2 class="hidden">Body container</h2>
-        <section class="beerBodyCon prod1Beer">
-          <a href="product.html">
-            <div class="titleProduct">
-              <div class="titleBeer">
-                <h2>GROLSCH 0.0%</h2>
+        <section id="brewerBanner">
+          <div class="textBrewerBlock">
+            <h2>BREWERS SHIELD</h2>
+            <div class="hidden" id="shieldTextConHide">
+              <div class="historyText">
+                <p>The Grolsch shield represents the tradition of the brand, with the mint leaf and barley plant as the principal ingredients.</p>
+                <p>The <span>BREWERS SHIELD </span>certifies a natural mint beer by the “Association the brewers” of Grolsch.</p>
               </div>
-              <p class="titleBeer">NON-ALCOHOL BEER</p>
             </div>
-          </a>
+          </div>
         </section>
 
-        <section class="beerBodyCon prod2Beer">
-          <a href="ourBeer.html">
-            <div class="titleProduct">
-              <div>
-                <h2>DIAMOND WHITE</h2>
-              </div>
-              <p>PREMIUM</p>
-            </div>
-          </a>
-        </section>
-
-        <section class="beerBodyCon prod3Beer">
-          <a href="ourBeer.html">
-            <div class="titleProduct">
-              <div class="titleBeer">
-                <h2>COOL MINT</h2>
-              </div>
-              <p class="titleBeer">Strong mint flavor</p>
-            </div>
-          </a>
+        <section id="shieldTextCon">
+          <div class="historyText">
+            <p>The Grolsch shield represents the tradition of the brand, with the mint leaf and barley plant as the principal ingredients.</p>
+            <p>The <span>BREWERS SHIELD </span>certifies a natural mint beer by the “Association the brewers” of Grolsch.</p>
+          </div>
         </section>
 
       </article>
