adding login page

--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
         </section>
       </section>
 
-
+<!--------------FOOTER section------------------>
 
       <footer class="footerCon">
         <section class="footerBox" id="MainNavCon">
