--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
       </article>
 
-
+<!--- - - - - -  FOOTER section------------------>
       <footer class="footerCon">
         <section class="footerBox" id="MainNavCon">
           <section id="shieldfooter">
