--- a/login.html
+++ b/login.html
@@ -42,54 +42,42 @@
       </header>
 
       <!-- starts the main banner container-->
-      <section class="bannerCon historyHead">
+      <section class="bannerCon loginHead">
         <h2 class="hidden">Main Content</h2>
 
-        <section id="historyBanner">
-          <div class="textHistoryBlock">
-            <h2>OUR HISTORY</h2>
-          </div>
-        </section>
-
-        <section id="historyTextCon">
-          <div class="textHistoryBlock hidden">
-            <h2>OUR HISTORY</h2>
-          </div>
-          <div class="historyText">
-            <p>The Grolsch brewery was founded in 1615 in Groenlo. The city of Groenlo was then known as Grolle, hence the name Grolsch, meaning ‘of Grolle’.</p>
-            <p>Grolsch is best known as an authentic and refreshing beer brand, delivering a fresh, natural experience with a particular flavor with mint and its fresh ingredients used in our beer.</p>
-            <p>Mint is present as the main ingredient, giving a feeling of coolness to your mouth, leaving a fresh and healthy breath.</p>
-            <p>Since 2010, Grolsch has been recognized as the only beer with properties for dental health, that is why 4 out of 5 brewers and dentists recommend it.</p>
-            <p>The new Grolsch 0.0% alcohol is a robust beer, with minty tones and a slight sweetness. The result is a beer that makes it the perfect thirst quencher at every moment of the day.</p>
-            <p> <span>Grolsch, a healthy and fresh tradition to share with friends.</span></p>
-          </div>
-        </section>
-      </section>
-
-      <!-- starts the BODY container-->
-
-      <article class="bannerCon">
-        <h2 class="hidden">Body container</h2>
-        <section id="brewerBanner">
-          <div class="textBrewerBlock">
-            <h2>BREWERS SHIELD</h2>
-            <div class="hidden" id="shieldTextConHide">
-              <div class="historyText">
-                <p>The Grolsch shield represents the tradition of the brand, with the mint leaf and barley plant as the principal ingredients.</p>
-                <p>The <span>BREWERS SHIELD </span>certifies a natural mint beer by the “Association the brewers” of Grolsch.</p>
-              </div>
+        <div id="loginFormsCon">
+          <section id="logInCon">
+            <div class="formHeadBlock">
+              <h2>LOG IN</h2>
             </div>
-          </div>
-        </section>
 
-        <section id="shieldTextCon">
-          <div class="historyText">
-            <p>The Grolsch shield represents the tradition of the brand, with the mint leaf and barley plant as the principal ingredients.</p>
-            <p>The <span>BREWERS SHIELD </span>certifies a natural mint beer by the “Association the brewers” of Grolsch.</p>
-          </div>
-        </section>
+            <div class="formBlock">
+              <form class="logInForm" action="#" method="post">
 
-      </article>
+                <p>Email adress</p>
+                <input type="text" name="email" class="field">
+
+                <p>Password</p>
+                <input type="text" name="phone" class="field">
+
+              </form>
+              <a href="#" class="button" id="logInButton">Log in</a>
+              <p class="linkTxt">Forgot password?</p>
+            </div>
+          </section>
+
+          <section id="updateCon">
+            <div class="formHeadBlock">
+              <h2>STAY UPDATE!</h2>
+              <p>SIGN UP TO SAVE 10% OFF YOUR FIRST DELIVERY AND BE THE FIRST TO KNOW ABOUT EXCLUSIVE OFFERS, PRODUCT RELEASES AND UPDATES</p>
+            </div>
+            <a href="#" class="button" id="subscButton">Subscribe</a>
+          </section>
+        </div>
+
+        <div id="logInImg" class="hidden"></div>
+
+    </section>
 
 <!--------------FOOTER section------------------>
       <footer class="footerCon">
