--- a/ourBeer.html
+++ b/ourBeer.html
@@ -92,7 +92,7 @@
 
       </article>
 
-
+<!-- - - - - - FOOTER section------------------>
       <footer class="footerCon">
         <section class="footerBox" id="MainNavCon">
           <section id="shieldfooter">
