edit product code

--- a/history.html
+++ b/history.html
@@ -93,7 +93,7 @@
 
       </article>
 
-<!--------------FOOTER section------------------>
+<!--FOOTER section------------------>
       <footer class="footerCon">
         <section class="footerBox" id="MainNavCon">
           <section id="shieldfooter">
@@ -106,7 +106,7 @@
                 <ul>
                   <li><a href="history.html">OUR HISTORY</a></li>
                   <li><a href="ourBeer.html">OUR BEER</a></li>
-                  <li><a href="userAccount.html">YOUR ACCOUNT</a></li>
+                  <li><a href="login.html">YOUR ACCOUNT</a></li>
                   <li><a href="contact.html">CONTACT US</a></li>
                 </ul>
               </nav>
