--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
         </section>
       </section>
 
-<!--------------FOOTER section------------------>
+<!-- FOOTER section------------------>
 
       <footer class="footerCon">
         <section class="footerBox" id="MainNavCon">
@@ -98,7 +98,7 @@
                 <ul>
                   <li><a href="history.html">OUR HISTORY</a></li>
                   <li><a href="ourBeer.html">OUR BEER</a></li>
-                  <li><a href="userAccount.html">YOUR ACCOUNT</a></li>
+                  <li><a href="login.html">YOUR ACCOUNT</a></li>
                   <li><a href="contact.html">CONTACT US</a></li>
                 </ul>
               </nav>
