--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <ul>
                   <li><a href="history.html">OUR HISTORY</a></li>
                   <li><a href="ourBeer.html">OUR BEER</a></li>
-                  <li><a href="userAccount.html">YOUR ACCOUNT</a></li>
+                  <li><a href="login.html">YOUR ACCOUNT</a></li>
                   <li><a href="contact.html">CONTACT US</a></li>
                 </ul>
               </nav>
