--- a/login.html
+++ b/login.html
@@ -81,7 +81,7 @@
 
     </section>
 
-<!--------------FOOTER section------------------>
+<!-- FOOTER section------------------>
       <footer class="footerCon">
         <section class="footerBox" id="MainNavCon">
           <section id="shieldfooter">
@@ -94,7 +94,7 @@
                 <ul>
                   <li><a href="history.html">OUR HISTORY</a></li>
                   <li><a href="ourBeer.html">OUR BEER</a></li>
-                  <li><a href="userAccount.html">YOUR ACCOUNT</a></li>
+                  <li><a href="login.html">YOUR ACCOUNT</a></li>
                   <li><a href="contact.html">CONTACT US</a></li>
                 </ul>
               </nav>
