--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
               <select id="country" name="countrySelect" class="field">
                 <optgroup label="Country">
                   <option value="CAD">Canada 🇨🇦</option>
-                  <option value="USA">Unated States 🇺🇸</option>
+                  <option value="USA">United States 🇺🇸</option>
                   <option value="COL">Colombia 🇨🇴</option>
                 </optgroup>
               </select>
