--- a/login.html
+++ b/login.html
@@ -110,7 +110,7 @@
         <section class="footerBox" id="SubNavCon">
           <div id="copyRight">
           <h3 class="hidden">footer Copyright</h3>
-            <p>This page and brand version of Grolsch is made for Fanshawe Collegep`s Final Integrated Project (FIP) in IDP3 program. Summer 2021 - second semester.</p>
+            <p>This page and brand version of Grolsch is made for Fanshawe College´s Final Integrated Project (FIP) in IDP3 program. Summer 2021 - second semester.</p>
 
             <p>&copy; 2021 GROLSCH. All rights reserved for Natalia Pabon-Viteri.</p>
           </div>
